--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -4,6 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
+
+    <!-- Camera Preview -->
     <androidx.camera.view.PreviewView
         android:id="@+id/cameraPreview"
         android:layout_width="match_parent"
@@ -11,10 +14,83 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/cameraControls" />
 
+    <!-- Bingkai Pemindaian -->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/scanFrame"
+        android:layout_width="340dp"
+        android:layout_height="500dp"
+        app:layout_constraintTop_toTopOf="@id/cameraPreview"
+        app:layout_constraintBottom_toBottomOf="@id/cameraPreview"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <!-- Sudut Kiri Atas -->
+        <View
+            android:layout_width="48dp"
+            android:layout_height="3dp"
+            android:background="@color/white"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <View
+            android:layout_width="3dp"
+            android:layout_height="48dp"
+            android:background="@color/white"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <!-- Sudut Kanan Atas -->
+        <View
+            android:layout_width="48dp"
+            android:layout_height="3dp"
+            android:background="@color/white"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <View
+            android:layout_width="3dp"
+            android:layout_height="48dp"
+            android:background="@color/white"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <!-- Sudut Kiri Bawah -->
+        <View
+            android:layout_width="48dp"
+            android:layout_height="3dp"
+            android:background="@color/white"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <View
+            android:layout_width="3dp"
+            android:layout_height="48dp"
+            android:background="@color/white"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <!-- Sudut Kanan Bawah -->
+        <View
+            android:layout_width="48dp"
+            android:layout_height="3dp"
+            android:background="@color/white"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <View
+            android:layout_width="3dp"
+            android:layout_height="48dp"
+            android:background="@color/white"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <!-- Camera Controls -->
     <LinearLayout
         android:id="@+id/cameraControls"
         android:layout_width="0dp"
         android:layout_height="150dp"
+
         android:orientation="horizontal"
         android:padding="16dp"
         android:gravity="center_horizontal"
@@ -22,6 +98,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
+        <!-- Gallery Button -->
         <ImageButton
             android:id="@+id/galleryButton"
             android:layout_width="48dp"
@@ -32,6 +109,7 @@
             android:src="@drawable/ic_gallery"
             android:background="@null" />
 
+        <!-- Capture Button -->
         <ImageButton
             android:id="@+id/captureButton"
             android:layout_width="72dp"
@@ -43,6 +121,7 @@
             android:src="@drawable/ic_capture"
             android:background="@null" />
 
+        <!-- Switch Camera Button -->
         <ImageButton
             android:id="@+id/switchCameraButton"
             android:layout_width="48dp"
@@ -53,5 +132,4 @@
             android:src="@drawable/ic_switch"
             android:background="@null" />
     </LinearLayout>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
